// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product OpenShift Metrics config should apply graph configuration: product action display should NOT display a total value 1`] = `
Object {
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  />,
}
`;

exports[`Product OpenShift Metrics config should apply graph configuration: product action display should display a total value 1`] = `
Object {
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.card-action-total, {"context":"coreHours","total":"1.1K"})
  </div>,
}
`;

exports[`Product OpenShift Metrics config should apply graph configuration: product action display should display a total value below 1000 1`] = `
Object {
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.card-action-total, {"context":"coreHours","total":"500"})
  </div>,
}
`;

exports[`Product OpenShift Metrics config should apply graph configuration: product action display should display a total value below 1000000 1`] = `
Object {
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.card-action-total, {"context":"coreHours","total":"900K"})
  </div>,
}
`;

exports[`Product OpenShift Metrics config should apply hosts inventory configuration: filtered 1`] = `
Object {
  "cells": Array [
    Object {
      "title": <React.Fragment>
        lorem
         
        
      </React.Fragment>,
    },
    Object {
      "title": "12.53",
    },
    Object {
      "title": <DateFormat
        date="lorem date obj"
      />,
    },
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"coreHours\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "coreHours": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"coreHours\\"})",
      "value": 12.53,
    },
    "displayName": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "value": "lorem",
    },
    "inventoryId": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"inventoryId\\"})",
      "value": "lorem inventory id",
    },
    "lastSeen": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "value": "lorem date obj",
    },
    "loremIpsum": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"loremIpsum\\"})",
      "value": "hello world",
    },
  },
}
`;

exports[`Product OpenShift Metrics config should apply hosts inventory configuration: filtered, fallback display 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "lorem",
    },
    Object {
      "title": "0.00",
    },
    [Function],
  ],
  "columnHeaders": Array [
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "transforms": Array [],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"coreHours\\"})",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "data": Object {
    "coreHours": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"coreHours\\"})",
      "value": null,
    },
    "displayName": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"displayName\\"})",
      "value": "lorem",
    },
    "inventoryId": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"inventoryId\\"})",
      "value": null,
    },
    "lastSeen": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"lastSeen\\"})",
      "value": null,
    },
    "loremIpsum": Object {
      "title": "t(curiosity-inventory.header, {\\"context\\":\\"loremIpsum\\"})",
      "value": "hello world",
    },
  },
}
`;
